<resources>

    <string name="app_name">banco_pan_clone</string>
    <string name="user_name">Pedro</string>
    <string name="user_desc">imagen do usuario</string>
    <string name="current_balance">Saldo atual</string>
    <string name="money">R$ 1.400,00</string>
    <string name="pix">Pix</string>
    <string name="payment_by_installments">Até 12x</string>
    <string name="payments">Pagamentos</string>
    <string name="black_friday">Black Friday</string>
    <string name="loan">Empréstimos</string>
    <string name="card">Cartões</string>
    <string name="ask_for_your_card">Peça seu cartão \n agora</string>
    <string name="text_loan">Empréstimos</string>
    <string name="text_loan_description">Temos novas \n opções pra \n você</string>
    <string name="investments">Investimentos</string>
    <string name="investments_description">Coloque seu \n dinheiro pra \n render</string>
    <string name="benefits">+Benefícios</string>
    <string name="benefits_description">Em \n manutenção</string>
    <string name="card_description">imagem do cartão do banco</string>


    <!--FIRST LIST STRING-->

    <string name="cell_phone_recharge">Recarga de celular</string>
    <string name="salary">Trazer salário</string>
    <string name="renegotiation">Renegociações</string>
    <string name="financing">Financiamento de Veículo</string>
    <string name="consigned_loan">Empréstimo Consignado</string>
    <string name="protection">Proteções</string>
    <string name="open_finance">Open Finance</string>

    <!--FIRST LIST STRING-->

    <string name="profile">Meu Perfil</string>
    <string name="help">Ajuda</string>
    <string name="changeUser">Trocar de Usuário</string>
    <string name="exit">Sair do app</string>

    <!--icons description string-->

    <string name="icVisibleOff_description">Disable visibility icon</string>
    <string name="icQuestion_description">Help icon</string>
    <string name="icArrowRight">Arrow icon</string>
    <string name="icPix">Pix icon</string>

    <!--VERSION-->

    <string name="version">Versão 2.90.3 #644</string>
    <string name="title_activity_card">CardActivity</string>

    <!--TEXT ABOUT CARD-->

    <string name="available_money"> Você ainda \n pode gastar: </string>
    <string name="current_money">R$ 1.245,00</string>
    <string name="bill">Sua fatura atual está em:</string>
    <string name="amount_spent">R$ 755,00</string>

    <!--BUTTONS CARD-->

    <string name="resumen">Resumo</string>
    <string name="account">Conta</string>
    <string name="cards">Cartões</string>
    <string name="loal_option">Empréstimos</string>
    <string name="investments_option">Investimentos</string>
    <string name="protetion_option">Proteções</string>

    <!--INVESTMENTS STRING -->

    <string name="cbd">CBD Liquidez diária</string>
    <string name="cdi">130% do CDI</string>
    <string name="fgc">Protegido pelo FGC</string>

    <string name="min_investment">Investimento \n mínimo:</string>
    <string name="amount_min_investment">R$ 5,00</string>

    <string name="max_investment">Investimento \n máximo:</string>
    <string name="amount_max_investment">R$ 10.000</string>

    <string name="dead_line">Prazo</string>
    <string name="days">90 días</string>

    <string name="ir">IR:</string>
    <string name="regressive">Regressivo</string>

    <string name="iof">IOF:</string>

    <string name="cash_out">Resgate:</string>
    <string name="diary">Diário</string>

    <string name="sender">Emissor:</string>
    <string name="pan_bank">Banco Pan</string>

    <string name="performance">Rendimento:</string>
    <string name="amount_performance">130% do CDI</string>

    <string name="invest_btn">Investir</string>

    <string name="desc_ic_back">Seta pra voltar na tela anterior</string>
    <string name="desc_banner">Imagems</string>

    <string name="banner_one">Saúde de qualidade \n pagando apenas R$ \n 8,99 por mês</string>
    <string name="banner_two">Precisa de crédito? \n O PAN tem a opção \n ideal pra você</string>
    <string name="banner_three">Quer rendimento \n maior que a \n poupança?</string>
    <string name="banner_four">O PAN tem um canal \n no WhatsApp</string>



</resources>