<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".InvestmentsActivity"
    android:layout_marginTop="20dp"
    android:paddingBottom="50dp"
    >

    <!-- LINES GUIDE-->


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="vertical"
        />

    <ImageView
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        android:paddingTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        android:contentDescription="@string/desc_ic_back"
        android:src="@drawable/ic_arrow_back"
        android:scaleType="fitStart"
        />

    <TextView
        android:id="@+id/cbd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        android:paddingTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        android:text="@string/cbd"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/cdi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        android:paddingTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/cbd"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        android:text="@string/cdi"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/protection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fgc"
        app:drawableEndCompat="@drawable/ic_help"
        android:drawablePadding="8dp"
        android:gravity="center"
        app:drawableTint="@color/blue"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        app:layout_constraintTop_toBottomOf="@id/cdi" />


    <!--OPTION LIST INVESTMENTS-->

    <LinearLayout
        android:id="@+id/min_investment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/protection"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        android:gravity="center"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/min_investment"
            android:layout_weight="1"
            android:textColor="@color/dark_grey"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_min_investment"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/max_investment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/min_investment"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        android:gravity="center"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/max_investment"
            android:layout_weight="1"
            android:textColor="@color/dark_grey"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_max_investment"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dead_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/max_investment"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        android:gravity="center"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dead_line"
            android:layout_weight="1"
            android:textColor="@color/dark_grey"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/dead_line"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ir"
            android:textColor="@color/dark_grey"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:drawableStartCompat="@drawable/ic_help"
            app:drawableTint="@color/dark_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regressive"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/iof"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ir"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iof"
            android:textColor="@color/dark_grey"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:drawableStartCompat="@drawable/ic_help"
            app:drawableTint="@color/dark_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regressive"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cash_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/iof"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        android:gravity="center"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cash_out"
            android:layout_weight="1"
            android:textColor="@color/dark_grey"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/cash_out"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        android:gravity="center"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sender"
            android:layout_weight="1"
            android:textColor="@color/dark_grey"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pan_bank"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/performance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/sender"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        android:gravity="center"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/performance"
            android:layout_weight="1"
            android:textColor="@color/dark_grey"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_performance"
            android:textStyle="bold"
            android:textColor="@color/blue"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/button_invest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintTop_toBottomOf="@id/performance"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        android:layout_marginTop="40dp"
        android:text="@string/invest_btn"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:padding="15dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>