<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

       <!-- LINES GUIDE-->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.1"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.1"
            android:orientation="vertical"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.9"
            android:orientation="vertical"
            />

        <!--HEADER-->

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="42dp"
        app:layout_constraintTop_toTopOf="@+id/lineTop"
        app:layout_constraintStart_toStartOf="@+id/lineLeft"
        app:layout_constraintEnd_toStartOf="@id/lineRight"

        >

        <TextView
            android:id="@+id/user_letter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/user_name_border"
            android:gravity="center"
            android:text="@string/user_letter"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/ic_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/icVisibleOff_description"
            android:src="@drawable/ic_visibility_off"
            android:layout_gravity="center"
             />

        <ImageView
            android:id="@+id/ic_help"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/icQuestion_description"
            android:gravity="center"
            android:src="@drawable/ic_question"
            android:layout_gravity="center"
            />

    </LinearLayout>


    <!--CURRENT BALANCE-->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/currentBalanceLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.25"
            />

  <TextView
      android:id="@+id/text_current_balance"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintWidth_percent="0.8"
      android:text="@string/current_balance"
      tools:layout_editor_absoluteY="103dp"
      android:layout_marginTop="32dp"
      app:layout_constraintTop_toBottomOf="@+id/header"
      app:layout_constraintStart_toStartOf="@+id/lineLeft"
      app:layout_constraintEnd_toEndOf="@id/lineRight"
      />

 <TextView
     android:id="@+id/quantity"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     app:layout_constraintWidth_percent="0.7"
     android:text="@string/money"
     android:textColor="@color/blue"
     android:textSize="16sp"
     app:layout_constraintStart_toStartOf="@+id/lineLeft"
     app:layout_constraintTop_toBottomOf="@+id/text_current_balance"

      />

 <ImageView
     android:layout_width="15dp"
     android:layout_height="15dp"
     android:src="@drawable/ic_arrow_right"
     android:contentDescription="@string/icArrowRight"
     app:layout_constraintEnd_toEndOf="@+id/lineRight"
     app:layout_constraintTop_toBottomOf="@+id/text_current_balance"
     android:layout_marginTop="5dp"
     />

 <androidx.constraintlayout.widget.Guideline
     android:id="@+id/pix_line"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:layout_constraintGuide_percent="0.40"
     />

    <!--PIX OPTION BOX-->

    <GridLayout
        android:id="@+id/myGridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintEnd_toStartOf="@id/lineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
        app:layout_constraintStart_toStartOf="@id/lineLeft"
        android:layout_marginTop="32dp"
        android:columnCount="2"
        android:rowCount="2"
        android:padding="2dp"
        android:alignmentMode="alignMargins"
        >

        <LinearLayout
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_background"
            >
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@string/icArrowRight"
                android:src="@drawable/ic_pix"
                app:tint="@color/blue"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pix"
                android:textSize="13sp"
                android:layout_marginTop="1dp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/rounded_background"
            android:layout_gravity="end"
            >
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@string/icArrowRight"
                android:src="@drawable/ic_payments"
                app:tint="@color/blue"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payments"
                android:textSize="13sp"
                android:layout_marginTop="1dp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/rounded_background"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/blue"
            >
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@string/icArrowRight"
                android:src="@drawable/ic_shopping_bag"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black_friday"
                android:textSize="13sp"
                android:layout_marginTop="1dp"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background"
            android:layout_gravity="end"
            >
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="@string/icArrowRight"
            android:src="@drawable/ic_money"
            app:tint="@color/blue"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan"
            android:textSize="13sp"
            android:layout_marginTop="1dp"

            />

        </LinearLayout>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>